--- a/styleguide.html
+++ b/styleguide.html
@@ -21,14 +21,14 @@
                     <div class="column box-l radius-xs gap-l align-start">
                         <a href="./"><svg-icon src="./rene.svg"></svg-icon></a>
                         <div class="column gap-m text-l">
-                            <a href="#features">getting started</a>
-                            <a href="/about">styleguide</a>
+                            <a href="./getting-started">getting started</a>
+                            <a href="./styleguide">styleguide</a>
                             <a href="#typography">↪ typography</a>
                             <a href="#colors">↪ colors</a>
                             <a href="#layout">↪ layout</a>
                             <a href="#shadows">↪ shadows</a>
                             <a href="#borders">↪ borders</a>
-                            <a href="#borders">↪ media</a>
+                            <a href="#media">↪ media</a>
                         </div>
                         <div class="gap-m">
                             <div>
