--- a/getting-started.html
+++ b/getting-started.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <meta property="og:title" content="Design" />
-        <link rel="icon" href="./images/favicon.png" />
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta property="og:title" content="Design">
+        <link rel="icon" href="./images/favicon.png">
 
-        <script
-            type="module"
-            src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"></script>
-        <link rel="stylesheet" href="./src/index.css" />
+        <script type="module" src="https://unpkg.com/@rainbowapp/svg-icon.js/dist/svg-icon.min.js"></script>
+        <link rel="stylesheet" href="./src/index.css">
         <title>get started with rené</title>
     </head>
     <body>
@@ -21,15 +19,11 @@
                     <div class="column box-l radius-xs gap-l align-start">
                         <a href="./"><svg-icon src="./rene.svg"></svg-icon></a>
                         <div class="column gap-m text-l">
-                            <a href="#features">getting started</a
-                            ><a href="#installation">↪ installation</a
-                            ><a href="#customization">↪ customization</a
-                            ><a>styleguide</a>
+                            <a href="#getting-started">getting started</a><a href="#installation">↪ installation</a><a href="#customization">↪ customization</a><a href="./styleguide">styleguide</a>
                         </div>
                         <div class="gap-m">
                             <div>
-                                <div
-                                    class="icon-s icon-color2 btn-toggle"></div>
+                                <div class="icon-s icon-color2 btn-toggle"></div>
                             </div>
                             <div>
                                 <div class="icon-s icon-github"></div>
@@ -39,10 +33,9 @@
                 </aside>
             </div>
             <section class="box align-center column view">
-                <div class="page">
-                    <h1>
-                        get started
-                        <br class />
+                <div class="page" id="getting-started">
+                    <h1>wow started
+                        <br>
                         with rené
                     </h1>
                     <h4>
@@ -69,11 +62,7 @@
                                     <li>
                                         <p>
                                             go to the
-                                            <a
-                                                href="https://nodejs.org/"
-                                                target="_new"
-                                                >Node.js website</a
-                                            >
+                                            <a href="https://nodejs.org/" target="_new">Node.js website</a>
                                             and download the latest version of
                                             Node.js for your operating system.
                                         </p>
@@ -100,10 +89,7 @@
                             </details>
                         </div>
                         <div class="box">
-                            <code
-                                class="padding-l radius-s background-secondary border"
-                                >npm install renecss</code
-                            >
+                            <code class="padding-l radius-s background-secondary border">npm install renecss</code>
                             <div class="column gap-m">
                                 <span class="text-s"></span>
                             </div>
@@ -125,8 +111,7 @@
                             </div>
                         </div>
                         <div class="box">
-                            <code
-                                class="background-secondary padding-l radius-s">
+                            <code class="background-secondary padding-l radius-s">
                                 <span>
                                     <div>&lt;!DOCTYPE html&gt;</div>
                                     <div>&lt;html&gt;</div>
@@ -136,11 +121,9 @@
                                         Website&lt;/title&gt;
                                     </div>
                                     <div class="row">
-                                        <b style="word-break: break-word"
-                                            >    &lt;link rel="stylesheet"
+                                        <b style="word-break: break-word">    &lt;link rel="stylesheet"
                                             href="https://unpkg.com/renecss/dist/rene.min.css"
-                                            /&gt;</b
-                                        >
+                                            /&gt;</b>
                                     </div>
                                     <div>  &lt;/head&gt;</div>
                                     <div>  &lt;body&gt;</div>
@@ -174,7 +157,7 @@
                             <p>
                                 to create your own theme, copy the following
                                 code to a new
-                                <b class>theme.css</b> file and override it with
+                                <b>theme.css</b> file and override it with
                                 the following guidelines.
                             </p>
                             <p>
@@ -191,8 +174,7 @@
                             </div>
                         </div>
                         <div class="box">
-                            <code
-                                class="background-secondary padding-l radius-s">
+                            <code class="background-secondary padding-l radius-s">
                                 <div>:root {</div>
                                 <div>  --size-base: 4px;</div>
                                 <div>
@@ -201,11 +183,11 @@
                                     sans-serif;
                                 </div>
                                 <div>
-                                    <br />
+                                    <br>
                                 </div>
                                 <div>}</div>
                                 <div>
-                                    <br />
+                                    <br>
                                 </div>
                                 <div>[data-theme="theme-name"] {</div>
                                 <div>  --color-primary: #8080ff;</div>
@@ -241,7 +223,7 @@
                                 point for other font sizes on the page. the
                                 entire layout system is applied relatively
                                 across everything and everywhere from
-                                <b class>one fundamental base size</b>.
+                                <b>one fundamental base size</b>.
                             </p>
                             <p>
                                 by changing this custom property, you're
@@ -250,8 +232,7 @@
                             </p>
                         </div>
                         <div class="box">
-                            <code
-                                class="background-secondary padding-l radius-s">
+                            <code class="background-secondary padding-l radius-s">
                                 <div>  --size-base: 4px;</div>
                             </code>
                         </div>
@@ -266,8 +247,7 @@
                             </p>
                         </div>
                         <div class="box">
-                            <code
-                                class="background-secondary padding-l radius-s">
+                            <code class="background-secondary padding-l radius-s">
                                 <div>
                                       --font-primary:"HelveticaNeue", "Helvetica
                                     Neue", Helvetica, Arial, "Lucida Grande",
@@ -282,15 +262,14 @@
                             <p>start by giving a <b>name to your theme</b>.</p>
                             <p>
                                 rené is built with four color groups in mind -
-                                <b class>brand colors</b>,
-                                <b class>backgrounds/foregrounds colors</b>, and
-                                <b class>semantic colors.</b>
+                                <b>brand colors</b>,
+                                <b>backgrounds/foregrounds colors</b>, and
+                                <b>semantic colors.</b>
                             </p>
                         </div>
                         <div class="box">
                             <code class="scrollable">
-                                <pre
-                                    class="background-secondary padding-l radius-s">
+                                <pre class="background-secondary padding-l radius-s">
 [data theme="light"] {
     --color-primary: #0000cd;
     --color-secondary: #800080;
@@ -303,8 +282,7 @@
     --color-positive: darkgreen;
     --color-critical: gold;
     --color-negative: orangered;
-}</pre
-                                >
+}</pre>
                             </code>
                         </div>
                     </div>
