--- a/index.html
+++ b/index.html
@@ -89,10 +89,7 @@
             </div>
             <section class="box align-center column view">
                 <div class="page" id="getting-started">
-                    <h1>wow started
-                        <br>
-                        with rené
-                    </h1>
+                    <h1>get started<div>with rené</div></h1>
                     <h4>
                         rené is a straightforward yet powerful toolkit for your
                         design and development tasks. this guide will take you
