--- a/reasonable.html
+++ b/reasonable.html
@@ -1,12 +1,24 @@
 <html lang="en" data-theme="light">
 
 <head>
-	<meta charset="utf-8">
-	<title>Reasonable.html – A single HTML document that contains a reasonably complete set of example HTML elements.
-	</title>
-	<meta name="description" content="">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="./src/index.css">
+	<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>reasonable.html</title>
+    <meta name="description" content="reasonable.html – a single html document that contains a reasonably complete set of example html elements.">
+    <meta name="keywords"
+        content="single, html, document, complete, example, elements, commonly, used, attempts, common, expected, exist, test, classless, css">
+    <meta property="og:title" content="reasonable.html">
+    <meta name="og:description" content="reasonable.html – a single html document that contains a reasonably complete set of example html elements.">
+    <meta property="og:image" content="./images/rene.css.png">
+    <meta property="og:url" content="https://rene.css">
+    <meta property="og:type" content="website">
+
+
+    <link rel="icon" href="./images/favicon-light.png">
+    <link rel="stylesheet" href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css" />
+    <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
+    <script defer data-domain="rnbw.company" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
