Added underlines and automatic padding setting for the sidebar

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
 <body>
     <style>
         .active {
-            /* text-decoration: underline;
-                text-decoration-thickness: 1.5px; */
-            padding-left: 1rem;
+            text-decoration: underline;
+            text-decoration-thickness: 1.5px;
         }
     </style>
     <rnbw-banner></rnbw-banner>
