Connect to rnbw.design

--- a/index.html
+++ b/index.html
@@ -1438,8 +1438,8 @@ h1 {
 
     <rnbw-footer></rnbw-footer>
 </body>
-<script src="https://rnbw.company/rnbw-banner.js"></script>
-<script src="https://rnbw.company/rnbw-footer.js"></script>
-<script src="table-of-contents.js"></script>
+<script src="https://rnbw.design/rnbw-banner.js"></script>
+<script src="https://rnbw.design/rnbw-footer.js"></script>
+<script src="https://rnbw.design/table-of-contents.js"></script>
 
 </html>
