--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="page">
             <nav class="box-l gap-xl">
-                <a href="https://https://renecss.org/getting_started/" class="column radius-m padding-xl box-s gap-l color-primary"
+                <a href="https://renecss.org/getting_started/" class="column radius-m padding-xl box-s gap-l color-primary"
                     style="color: white">
                     <div class="box">
                         <svg-icon src="./images/arrow-right.svg"></svg-icon>
@@ -59,7 +59,7 @@
                     <h6>get started</h6>
                 </a>
 
-                <a href="https://https://renecss.org/styleguide/" class="column color-secondary radius-m padding-xl box-s gap-l"
+                <a href="https://renecss.org/styleguide/" class="column color-secondary radius-m padding-xl box-s gap-l"
                     style="color: white">
                     <div class="box-l row justify-stretch gap-m">
                         <div class="box">
