--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         </div>
         <div class="page">
             <nav class="box-l gap-xl">
-                <a href="https://renecss.org/getting_started/" class="column radius-m padding-xl box-s gap-l color-primary"
-                    style="color: white">
+                <a href="getting_started" class="column radius-m padding-xl box-s gap-l color-primary" style="color: white">
                     <div class="box">
                         <svg-icon src="./images/arrow-right.svg"></svg-icon>
                     </div>
@@ -59,8 +58,7 @@
                     <h6>get started</h6>
                 </a>
 
-                <a href="https://renecss.org/styleguide/" class="column color-secondary radius-m padding-xl box-s gap-l"
-                    style="color: white">
+                <a href="styleguide" class="column color-secondary radius-m padding-xl box-s gap-l" style="color: white">
                     <div class="box-l row justify-stretch gap-m">
                         <div class="box">
                             <svg-icon src="./images/shapes.svg"></svg-icon>
