--- a/getting_started.html
+++ b/getting_started.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="./images/favicon-light.png">
     <link rel="stylesheet" href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css" />
     <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
-    <script defer data-domain="rnbw.company" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
@@ -305,8 +305,8 @@
 
     <rnbw-footer></rnbw-footer>
 </body>
-<script src="https://rnbw.company/rnbw-header.js"></script>
-<script src="https://rnbw.company/rnbw-footer.js"></script>
-<script src="https://rnbw.company/table-of-contents.js"></script>
+<script src="https://rnbw.design/rnbw-header.js"></script>
+<script src="https://rnbw.design/rnbw-footer.js"></script>
+<script src="https://rnbw.design/table-of-contents.js"></script>
 
 </html>
