--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="icon" href="./images/favicon-light.png">
     <link rel="stylesheet" href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css" />
     <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
-    <script defer data-domain="rnbw.company" src="https://plausible.io/js/script.js"></script>
+    <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <section class="box justify-stretch column align-center">
         <div class="page">
             <div class="column gap-m align-center">
-                <svg-icon src="https://rnbw.company/images/rene.svg"></svg-icon>
+                <svg-icon src="https://rnbw.design/images/rene.svg"></svg-icon>
                 <h6 class="text-center">rené.css</h6>
             </div>
 
@@ -80,7 +80,7 @@
 
     <rnbw-footer></rnbw-footer>
 </body>
-<script src="https://rnbw.company/rnbw-header.js"></script>
-<script src="https://rnbw.company/rnbw-footer.js"></script>
+<script src="https://rnbw.design/rnbw-header.js"></script>
+<script src="https://rnbw.design/rnbw-footer.js"></script>
 
 </html>
