--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         </div>
     </section>
 
-    <rnbw-footer></rnbw-footer>
+    <under-footer></under-footer>
 </body>
 <script src="https://rnbw.design/rnbw-header.js"></script>
-<script src="https://rnbw.design/rnbw-footer.js"></script>
+<script src="https://weareunder.design/js/footer.js"></script>
 
 </html>
