--- a/getting_started.html
+++ b/getting_started.html
@@ -303,10 +303,10 @@
         </div>
     </div>
 
-    <rnbw-footer></rnbw-footer>
+    <under-footer></under-footer>
 </body>
 <script src="https://rnbw.design/rnbw-header.js"></script>
-<script src="https://rnbw.design/rnbw-footer.js"></script>
+<script src="https://weareunder.design/js/footer.js"></script>
 <script src="https://rnbw.design/table-of-contents.js"></script>
 
 </html>
