--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
     <link rel="icon" href="./images/favicon-light.png">
-    <link rel="stylesheet" href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
     <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
 </head>
@@ -26,10 +26,7 @@
     <rnbw-header></rnbw-header>
     <section class="box justify-stretch column align-center">
         <div class="page">
-            <div class="column gap-m align-center">
-                <svg-icon src="https://rnbw.design/images/rene.svg"></svg-icon>
-                <h6 class="text-center">rené.css</h6>
-            </div>
+            
 
             <div class="column gap-xl">
                 <h1 class="text-center">
