--- a/reasonable.html
+++ b/reasonable.html
@@ -16,7 +16,7 @@
 
 
     <link rel="icon" href="./images/favicon-light.png">
-    <link rel="stylesheet" href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
     <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
 </head>
