--- a/styleguide.html
+++ b/styleguide.html
@@ -17,7 +17,7 @@
 
 
     <link rel="icon" href="./images/favicon-light.png">
-    <link rel="stylesheet" href="https://unpkg.com/@rnbws/renecss/dist/rene.min.css" />
+    <link rel="stylesheet" href="./src/index.css" />
     <script src="https://unpkg.com/@rnbws/svg-icon.js/dist/svg-icon.min.js"></script>
     <script defer data-domain="rnbw.design" src="https://plausible.io/js/script.js"></script>
 </head>
@@ -173,8 +173,8 @@ line-height: 0.95;
                         <div class="box justify-start align-start">
                             <div class="gap-s justify-start padding-m background-secondary radius-m align-center notification"
                                 data-clipboard-text="<h6>Write Something</h6>">
-                                <svg-icon src="https://raincons.rnbw.dev/icons/heading.svg" class="icon-s"></svg-icon>
-                                <span>Heading 6</span>
+                                <svg-icon src="https://raincons.rnbw.dev/icons/paragraph.svg" class="icon-s"></svg-icon>
+                                <span>Paragraph</span>
                             </div>
                         </div>
                         <div class="box-m column">
