--- a/styleguide.html
+++ b/styleguide.html
@@ -26,8 +26,8 @@
     <rnbw-header></rnbw-header>
 
     <div class="row" style="flex-wrap: nowrap">
-        <div>
-            <aside class="column justify-stretch sticky padding-l" style="width: 20rem; display: inline-block;">
+        <div class="box-xs sticky" style="position:relative;">
+            <aside class="column justify-stretch padding-l" style="display: inline-block;">
             </aside>
         </div>
         <div class="view column align-center">
