--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <rnbw-header></rnbw-header>
     <section class="box justify-stretch column align-center">
         <div class="page">
-            
+
 
             <div class="column gap-xl">
                 <h1 class="text-center">
@@ -47,7 +47,8 @@
         </div>
         <div class="page">
             <nav class="box-l gap-xl">
-                <a href="getting_started" class="column radius-m padding-xl box-s gap-l color-primary" style="color: white">
+                <a href="getting_started" class="column radius-m padding-xl box-s gap-l color-primary"
+                    style="color: white">
                     <div class="box">
                         <svg-icon src="./images/arrow-right.svg"></svg-icon>
                     </div>
@@ -55,7 +56,8 @@
                     <h6>get started</h6>
                 </a>
 
-                <a href="styleguide" class="column color-secondary radius-m padding-xl box-s gap-l" style="color: white">
+                <a href="styleguide" class="column color-secondary radius-m padding-xl box-s gap-l"
+                    style="color: white">
                     <div class="box-l row justify-stretch gap-m">
                         <div class="box">
                             <svg-icon src="./images/shapes.svg"></svg-icon>
