--- a/getting_started.html
+++ b/getting_started.html
@@ -26,8 +26,8 @@
     <rnbw-header></rnbw-header>
 
     <div class="row" style="flex-wrap: nowrap">
-        <div class="box-xs sticky" style="position:relative;">
-            <aside class="column justify-stretch padding-l" style="display: inline-block;">
+        <div>
+            <aside class="column justify-stretch sticky padding-l" style="display: inline-block;">
             </aside>
         </div>
         <div class="view column align-center">
