Refactor index.html to improve content and structure
- Updated the description of the rené design system to highlight its AI-ready capabilities and utility-first approach.
- Enhanced the text to clarify the framework's dual role as both a library and a framework, emphasizing its compatibility with AI tools and maintainable code.
- Added animation classes to navigation links for improved user interaction and visual appeal.

--- a/index.html
+++ b/index.html
@@ -28,26 +28,34 @@
         <div class="page">
 
 
-            <div class="column gap-xl">
+            <div class="column gap-xl align-center"><svg-icon src="images/rene-logo.svg"
+                    class="animate rotate infinite"></svg-icon>
                 <h1 class="text-center">
                     design for intention<br />
                     and meaning
                 </h1>
                 <h3 class="text-center">
                     rené is a design system for styling clean, simple,
-                    lightweight interfaces. it's easy enough to quickly "get
-                    it.” no weird stuff. it is both a library and a
-                    framework. as a library, it offers ready-to-use elements
-                    and styles. as a framework, it gives a consistent and
-                    customizable structure for building and styling your
-                    apps. it is the ultimate common ground for designers and
-                    developers.
+                    lightweight interfaces. it's the first AI-ready CSS framework,
+                    creating the perfect bridge between design and code. its
+                    utility-first approach makes it naturally compatible with AI
+                    design-to-code workflows, while remaining easy enough to
+                    "get it" for humans. no weird stuff.
+                </h3>
+                <h3 class="text-center">
+                    as both a library and framework, rené offers ready-to-use
+                    elements and a consistent, customizable structure. it
+                    prioritizes utility-first classes yet allows for inline styles,
+                    making it ideal for AI interpretation while maintaining
+                    clean, maintainable code. this makes rené the ultimate
+                    common ground for designers, developers, and AI tools.
                 </h3>
             </div>
         </div>
         <div class="page">
-            <nav class="box-l gap-xl">
-                <a href="getting_started" class="column radius-m padding-xl box-s gap-l color-primary"
+            <nav class="box-l gap-m">
+                <a href="getting_started"
+                    class="animate hover-up ease-in transition column radius-m padding-xl box-s gap-l color-primary"
                     style="color: white">
                     <div class="box">
                         <svg-icon src="./images/arrow-right.svg"></svg-icon>
@@ -56,7 +64,8 @@
                     <h6>get started</h6>
                 </a>
 
-                <a href="styleguide" class="column color-secondary radius-m padding-xl box-s gap-l"
+                <a href="styleguide"
+                    class="animate hover-up ease-in transition column color-secondary radius-m padding-xl box-s gap-l"
                     style="color: white">
                     <div class="box-l row justify-stretch gap-m">
                         <div class="box">
@@ -66,7 +75,7 @@
 
                     <h6>styleguide</h6>
                 </a>
-                <a class="foreground-primary column radius-m border padding-xl box-xs gap-l"
+                <a class="animate hover-up ease-in transition foreground-primary column radius-m border padding-xl box-xs gap-l"
                     href="https://github.com/rnbwdev/rene.css">
                     <div class="box">
                         <svg-icon src="./images/code-brackets.svg"></svg-icon>
